# bit-maze

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  next.config.mjs  package-lock.json  package.json
.openai/: hosting.json
app/: globals.css  layout.js  page.js
components/: BitMazeGame.jsx
docs/: ASM.md  FORMAT.md  PROGRESS.md  REPLAY.md  SIZING.md  SPRITE.md  VM.md  changelog.md  roadmap.md
levels/: circuit.bm  door.bm  first.bm  first.ppm  garden.bm  trial.bm  vault.bm
lib/: bitmaze.js
scripts/: circuit-a.asm  circuit-b.asm  countdown.asm  door.asm  gate.asm  prepare-hosting.mjs  trial.asm  vault.asm
sprites/: floor.spr  hazard.spr  item.spr  player.spr  wall.spr
src/: asm.rs  check.rs  dump.rs  format.rs  framebuffer.rs  lib.rs  main.rs  newlevel.rs  play.rs  replay.rs  samples.rs  sprite.rs  vm.rs  window.rs  world.rs
tests/: format.rs  phase8.rs  replay.rs  samples.rs  triggers.rs  world.rs
web-tests/: engine.test.js
